<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.sampa.tasksreminder.NewTask$PlaceholderFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textCapSentences" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titleInput"
            android:layout_below="@+id/titleInput"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="3" />

        <Button
            android:id="@+id/dateButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/descriptionInput"
            android:layout_below="@+id/descriptionInput"
            android:freezesText="true"
            android:text="@string/choose_date" />

        <Button
            android:id="@+id/timeButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionInput"
            android:layout_toRightOf="@+id/dateButton"
            android:freezesText="true"
            android:text="@string/choose_time" />

        <TextView
            android:id="@+id/reminderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dateButton"
            android:layout_below="@+id/dateButton"
            android:layout_marginTop="20dp"
            android:text="@string/reminder"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/toggleReminderCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reminderText"
            android:layout_below="@+id/reminderText"
            android:checked="true"
            android:text="@string/toggle_reminder" />

        <TextView
            android:id="@+id/startReminderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/toggleReminderCheckBox"
            android:layout_below="@+id/toggleReminderCheckBox"
            android:text="@string/reminder_start" />

        <Button
            android:id="@+id/dateReminderButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/startReminderText"
            android:layout_below="@+id/startReminderText"
            android:text="@string/choose_date" />

        <Button
            android:id="@+id/timeReminderButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startReminderText"
            android:layout_toRightOf="@+id/dateReminderButton"
            android:text="@string/choose_time" />

        <TextView
            android:id="@+id/reminderFrequencyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dateReminderButton"
            android:layout_below="@+id/dateReminderButton"
            android:text="@string/reminder_frequency" />

        <EditText
            android:id="@+id/reminderInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reminderFrequencyText"
            android:layout_below="@+id/reminderFrequencyText"
            android:ems="10"
            android:inputType="number" />

        <Spinner
            android:id="@+id/reminderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/reminderInput"
            android:layout_toRightOf="@+id/reminderInput" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminderSpinner"
            android:background="#FF0000"
            android:text="@string/delete_task"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>